

  01 Nov 2012; Justin Lecher <jlec@gentoo.org> Manifest:
  Update logo

  31 Oct 2012; Justin Lecher <jlec@gentoo.org> lh-sources-3.6.4.ebuild:
  Add gentoo logo

*lh-sources-3.6.4 (31 Oct 2012)

  31 Oct 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.4.ebuild:
  Version Bump

*lh-sources-3.6.2 (14 Oct 2012)

  14 Oct 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.2.ebuild:
  Version Bump

  11 Oct 2012; Justin Lecher <jlec@gentoo.org> lh-sources-3.6.1.ebuild,
  +files/0001-block-cgroups-kconfig-build-bits-for-BFQ-v5-3.6.patch,
  +files/0002-block-introduce-the-BFQ-v5-I-O-sched-for-3.6.patch,
  +files/README.BFQ:
  Distribute patches via overlay repo (git diff + patch problem)

*lh-sources-3.6.1 (11 Oct 2012)

  11 Oct 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.1.ebuild,
  +metadata.xml:
  New version including BFQ scheduler
