@@ -12,17 +12,20 @@ DIST genpatches-3.6-4.base.tar.bz2 62335 SHA256 dc72b6c3c4a025f7a1090e8d479ea9a5
 DIST genpatches-3.6-4.extras.tar.bz2 17029 SHA256 7e22574a6618fbb2eade0610fd130a06a322891f109d5ad79b1b8674da5321c8 SHA512 243ac5d7b78e0e308cfb5536439eb6da01f46bebc1a549c61eb9cb0b1199ccabfad2a7d6186a3b1387417dc40082fc931d37d07ed31bb0e78a0e9afc0e4bf655 WHIRLPOOL 71f32176b12b1b08450854afc52e603ba687628a21d18b1ffb83063cd5db159e53b729901085b57dd969fcf731f3ebdb191a1015c6c98bb1a6015f965d23e543
 DIST genpatches-3.6-5.base.tar.bz2 120301 SHA256 de33ac330eec7a05549f6d97cb63023590dd402221d10a5c1235ebab502b998c SHA512 64491d691b0400139e12d60c775cbe45ba68918f66ef1056ba840116eaf4f50a07b568c2d05fc2ce25e81e6b52addb2a623222d493e89b237d714de6860ea749 WHIRLPOOL 20d0b5099906e3fe53bf8d0f89abf532d72869b6a98d4358a528fbb24105a294e7378adaf06f8a4e8aee3331509ba12786197ace792a6024cc69e37458e94f4b
 DIST genpatches-3.6-5.extras.tar.bz2 17038 SHA256 bf6be402ec3ef125ecaf626379f777a262e2f6776d8f5115ac0834f1e3d18b25 SHA512 614c845d474890ad0fd4271ea133464626498c3877d49c1df9940cfb2bc2a68a13828b6cae590a0d5619cf21521fe119fab782714d0bc37c287e0bba29f22fdf WHIRLPOOL ef8c9a76be1ac027b3d01e47bf22dbe178b2b68e85f4ace1186aedd89e513ff010d6e50e1392e17dde3bfebabcff07c348b04163398c43c045d6e37e78caf954
+DIST genpatches-3.6-6.base.tar.bz2 149784 SHA256 ca563f1a1b80c5206e02182b94abf20cf4427e3dcf05f81cef8ce237d2d0a58e SHA512 e5d28a31924bf1e45b78a60632231fef85cf3b3b779661144457ed051304b280a890a3daf7267bf439fb5d43ff3226718cfc72c21a9c86b9a5b666f3596393bd WHIRLPOOL 1f20cc37d9889fb741ab0d412ced109f2ec46557ae96d49a9d400d72713779735a3d1fa95a9ffbcebaf6fab04668b2114f211c347d26d41c3279c84756a3a58f
+DIST genpatches-3.6-6.extras.tar.bz2 17038 SHA256 bf6be402ec3ef125ecaf626379f777a262e2f6776d8f5115ac0834f1e3d18b25 SHA512 614c845d474890ad0fd4271ea133464626498c3877d49c1df9940cfb2bc2a68a13828b6cae590a0d5619cf21521fe119fab782714d0bc37c287e0bba29f22fdf WHIRLPOOL ef8c9a76be1ac027b3d01e47bf22dbe178b2b68e85f4ace1186aedd89e513ff010d6e50e1392e17dde3bfebabcff07c348b04163398c43c045d6e37e78caf954
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.6.tar.bz2 82296001 SHA256 88ae0a20fd39ecae79db0ce8f9397922fae33c8b06a54ed2c883c861126c9771 SHA512 cbaefc2c4c8ab2251c3345b7b2c88d55a49e3468d8b177b05dd6d96a802efa9a052b1a1ecab8b71298bac97f45259516d88253838332b4fdb4307780ebcddce9 WHIRLPOOL e17e3800951f0c3af21015d1a1c99698d0ef70815bd4f131dd60b30baef70d4c255988857533a9a7c058388c2febfcf02d12cde2a7ed46b24fa85aeb260c0251
 EBUILD lh-sources-3.6.1.ebuild 1655 SHA256 0565a12537fef87dace6c98616b8162acdba434e8b5cb0de835d589f02ed0632 SHA512 c96a1af8f2e63f083014159f2ab31178aff671e5728c5de02808c7859a0da81027f7a9836f80009e55a028ef8cf403eb2c6a6143d7d7065a0355dfe3ca40f779 WHIRLPOOL 30e72fdf7af9ef91bbc310f3f6baffd80203a6cf89b55bf615d262df13c54e258854eddfae32db78da08a4b7a8d701a0c2cc2457a73a0896f9f9aa7518065fec
 EBUILD lh-sources-3.6.2.ebuild 1655 SHA256 4abd23d7377f2f405e518f0ae18d8764d998dc42eb2d4a6e5794935672237b31 SHA512 bb80d637bc0393794b20b849ef2ccb14bf0411268fc7933eec4b6306dbe6c16f9e68522b63b18f2b062f2b9dd12f9890dc68f0a65da21c4ef942f7384f38eab1 WHIRLPOOL 83b4b9218e52c101bdb50c50798d6f575c3727b75d9a8369c575439ff722dfcc54b871b58f3b7ba3dad3936c49a44a5f3949745c84a677fde9ca23dc748f5fbb
 EBUILD lh-sources-3.6.4.ebuild 1855 SHA256 4c7413d56e067cb1f41344398183513a4a51921a4ae89b4c0fcde229bcdcdcbf SHA512 12bc55493b873efa1f159ce7bedaba402bf35c9d00707e65ec2818ac8ff7d742a314a43598570cc29abcefe3541742beaffef7c45ef9094bc180bc64039408bb WHIRLPOOL 1f627b516c03278382e0538f9454a52dc8343788977e839da8ff029a1734210e1da2527a6da1b2c1f426e85dc51a820f7e120d5d41c532dd8936be49c158c2c3
-MISC ChangeLog 865 SHA256 4f75d1b33f3ce3e9b805dd84215c0e89d0260833c6d25a7a2af3370455044285 SHA512 cc4122e0b6186829c37e059eaf8fbacf06ebc5b4f98416c5ef137e7f1a3fba8dffa70b65a02d382511d5a14df6e1f7cae5694d9ee632541fda4257d4502a68f3 WHIRLPOOL 815fc4bb87bde7e06e1695fb87b724223d7ce7d7fe8b0c7cc34b10420d7b563b33f91c782db472532e90ad12261b31e117332f1061ab6b276c3fb79f091bc998
+EBUILD lh-sources-3.6.5.ebuild 1855 SHA256 d9e942ed0538e2e344af329f3741f29c766bda34f4a1337a3354898064ca2790 SHA512 497d07c9e34ac89c426fb07ad36f48a5d0f223828e3244bb3437c63f411f1046bc76626e0c87ae91e81677ff4794e983541803c7faacb0b510cb460f914a50d5 WHIRLPOOL e01cfa861c37c2292f83c2d3aaba85fd41513e8456b89c2026cd38e976e6a9a05c9560e3ee75c2d37dc58101260523f1c5f158640746e78558b829a844d5498e
+MISC ChangeLog 987 SHA256 b55c9a957f16f2edc98dad9f645f3cda46afe31ba2eb1ea9d572c4e651de31b9 SHA512 f8bee1cdc5a54fe14b94cc29d154a97758e673b43421f88534cfa9fdaec36b2ead562fb258cc770c3153b053c0499bc8f8604cfab4ddd11f3289964a10b849ac WHIRLPOOL b4638530b5ea37c06c305e39e076438d0d68d4d033103d7a5fb8f81e7b98f6f3b3689e39b2461ffdcc696826cf8a223a77f9ceed3b67de980def23e77c74adc1
 MISC metadata.xml 458 SHA256 7e2d0354e199ee4243d8396496ef574368ceac66d2e91b949a3dad509031d347 SHA512 3235e64018277eaffb7fa97ff15a3797da3e5f8218c03d52ad33ae8c5fdb5f583e549ed8f3043b43ea8e222570fca0c44ffcf0b97ab03a5e8eb9631a5600fad2 WHIRLPOOL c0b6c201d4d23c99ae87ccfd758a365ebec7c1de31c47d4fe84cd5cf5d15dc32691bc65a3c78c202003882214f626af574014af3179a3ea637f4b4af9d0b30ee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlCSXMcACgkQgAnW8HDreRZulQCgqTpWQ7cY0PUCVFsfTWOWUl8q
-ZoIAoMXem5JtsxQQDy8LWLjaKQqrt9OS
-=KxVJ
+iEYEAREKAAYFAlCSq3sACgkQgAnW8HDreRaz2QCfXgxglMfjRLMjiUSuxxIXMGZy
+zksAn0GfegLjAlEQG6dH6dXIZZ5OJDLx
+=hhvh
 -----END PGP SIGNATURE-----
