@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.6.5 (01 Nov 2012)
+
+  01 Nov 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.5.ebuild:
+  Version BUmp
+
   01 Nov 2012; Justin Lecher <jlec@gentoo.org> Manifest:
   Update logo
 
